--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 未知国家-1.85MB/s(Youtube:不良林), server: vfly8.win, port: 443, type: vmess, uuid: 8fc94fe3-cfb1-4bc7-e43b-26d4d1e5f4cd, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /myblog, ws-headers: {Host: vfly8.win}}
-  - {name: 🇨🇳 中国-4.10MB/s(Youtube:不良林), server: in-tw-2.onebox6.org, port: 38201, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-tw-2.onebox6.org}}
-  - {name: 🇺🇸 美国-5.30MB/s(Youtube:不良林), server: trus.moonfree.top, port: 443, type: trojan, password: 4863e1b2-ec2f-4c71-b862-ce533028e57e, sni: trus.moonfree.top, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-6.82MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-2.80MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.41MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.42MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-2.47MB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
+  - {name: 🇭🇰 (已存活2天)香港-3.85MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
+  - {name: 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
   - {name: 🇨🇦 加拿大-1.87MB/s(Youtube:不良林), server: 196.247.59.154, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇨🇦 加拿大-1.91MB/s(Youtube:不良林), server: 196.247.59.154, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇨🇦 加拿大-1.92MB/s(Youtube:不良林), server: 196.247.59.154, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 未知国家-1.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.30MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.82MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.42MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.47MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活2天)香港-3.85MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.92MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 未知国家-1.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.30MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.82MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.42MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.47MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活2天)香港-3.85MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.92MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 未知国家-1.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.30MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.82MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.42MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.47MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活2天)香港-3.85MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.92MB/s(Youtube:不良林)
@@ -66,17 +66,18 @@ proxy-groups:
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 (已存活2天)香港-3.85MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 未知国家-1.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.30MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.82MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.42MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.47MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活2天)香港-3.85MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.92MB/s(Youtube:不良林)
@@ -87,11 +88,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 未知国家-1.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.30MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.82MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.42MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.47MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活2天)香港-3.85MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.92MB/s(Youtube:不良林)
@@ -103,11 +104,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 未知国家-1.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.30MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.82MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.42MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.47MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活2天)香港-3.85MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.92MB/s(Youtube:不良林)
@@ -128,11 +129,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 未知国家-1.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.30MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.82MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.42MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.47MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活2天)香港-3.85MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.92MB/s(Youtube:不良林)
