--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,12 +5,12 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-4.41MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.42MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-2.47MB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
-  - {name: 🇭🇰 (已存活2天)香港-3.85MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
+  - {name: 🇨🇳 中国-5.93MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32000, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-335.6KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32000, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.56MB/s(Youtube:不良林), server: fhcamd2.gaox.ml, port: 443, type: trojan, password: dbf9bf9c-2c3f-474a-8031-d4c00666a989, sni: fhcamd2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-6.93MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
-  - {name: 🇨🇦 加拿大-1.87MB/s(Youtube:不良林), server: 196.247.59.154, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-2.04MB/s(Youtube:不良林), server: 196.247.59.154, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇨🇦 加拿大-1.91MB/s(Youtube:不良林), server: 196.247.59.154, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇨🇦 加拿大-1.92MB/s(Youtube:不良林), server: 196.247.59.154, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇨🇦 加拿大-2.01MB/s(Youtube:不良林), server: 196.247.59.154, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
@@ -21,12 +21,12 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-4.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.42MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.47MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活2天)香港-3.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-335.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.93MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.04MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.92MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
@@ -36,12 +36,12 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-4.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.42MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.47MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活2天)香港-3.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-335.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.93MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.04MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.92MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
@@ -52,12 +52,12 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-4.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.42MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.47MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活2天)香港-3.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-335.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.93MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.04MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.92MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
@@ -66,19 +66,18 @@ proxy-groups:
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 (已存活2天)香港-3.85MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-4.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.42MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.47MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活2天)香港-3.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-335.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.93MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.04MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.92MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
@@ -88,12 +87,12 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-4.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.42MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.47MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活2天)香港-3.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-335.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.93MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.04MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.92MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
@@ -104,12 +103,12 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-4.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.42MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.47MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活2天)香港-3.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-335.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.93MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.04MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.92MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
@@ -129,12 +128,12 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-4.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.42MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.47MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活2天)香港-3.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-335.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.93MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.04MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.92MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
