--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,15 +5,15 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.97MB/s(Youtube:不良林), server: vfly8.win, port: 443, type: vmess, uuid: 8fc94fe3-cfb1-4bc7-e43b-26d4d1e5f4cd, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /myblog, ws-headers: {Host: vfly8.win}}
+  - {name: 🇨🇳 中国-3.56MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
   - {name: 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇮🇳 印度-295.1KB/s(Youtube:不良林), server: jgwhdlb2.gaox.ml, port: 443, type: trojan, password: 54080134-2cba-4535-8599-95650bd9aa54, sni: jgwhdlb2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-6.69MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34004, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-4.46MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇰🇷 韩国-5.29MB/s(Youtube:不良林), server: 152.67.223.187, port: 13774, type: vmess, uuid: 5da35e16-0af7-47cc-ed73-269824ccb1a2, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-2.04MB/s(Youtube:不良林), server: 196.247.59.154, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇨🇦 加拿大-1.91MB/s(Youtube:不良林), server: 196.247.59.154, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇨🇦 加拿大-1.92MB/s(Youtube:不良林), server: 196.247.59.154, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇦 加拿大-2.01MB/s(Youtube:不良林), server: 196.247.59.154, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-2.00MB/s(Youtube:不良林), server: 196.247.59.154, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇯🇵 日本-3.65MB/s(Youtube:不良林), server: 85.208.108.20, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
 proxy-groups:
   - name: 🔰 节点选择
@@ -21,30 +21,30 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.56MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
-      - 🇮🇳 印度-295.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.69MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.46MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-5.29MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.04MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.92MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.00MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.65MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.56MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
-      - 🇮🇳 印度-295.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.69MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.46MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-5.29MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.04MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.92MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.00MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.65MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
@@ -52,15 +52,15 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.56MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
-      - 🇮🇳 印度-295.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.69MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.46MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-5.29MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.04MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.92MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.00MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.65MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
@@ -72,30 +72,30 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.56MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
-      - 🇮🇳 印度-295.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.69MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.46MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-5.29MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.04MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.92MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.00MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.65MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.56MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
-      - 🇮🇳 印度-295.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.69MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.46MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-5.29MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.04MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.92MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.00MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.65MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
@@ -103,15 +103,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.56MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
-      - 🇮🇳 印度-295.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.69MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.46MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-5.29MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.04MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.92MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.00MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.65MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
@@ -128,15 +128,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.56MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.67MB/s(Youtube:不良林)
-      - 🇮🇳 印度-295.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.69MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.46MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-5.29MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.04MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.92MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.00MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.65MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
